[tool.poetry]
name = "SHARKVOICE_brain_games"
version = "0.2.3"
description = "Several text-based terminal games that check your mental arithmetic skill."
classifiers = [
  "Environment :: Console",
  "Topic :: Games/Entertainment"
]
authors = ["sharkvoice <sharknoise@gmail.com>"]
repository = "https://github.com/sharkvoice/python-project-lvl1"
packages = [
  {include = "brain_games"},
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
